# factorCI

./: .coverage  README.md  pyproject.toml
.github/workflows/: ci.yml
rci/rci/: main.py
rci/tests/: test_main.py
src/: connectors.py  fractions.py  logic_gates.py
tests/: test_connectors.py  test_fractions.py  test_logic_gates.py
